/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package lapr4.green.s1.ipc.n1970581.findworkbook.controller;

import csheets.ui.ctrl.UIController;

/**
 * Controller for use case: IPC01.1 Search Workbook
 * @author Hugo
 */
public class SearchWorkbookController {
    
    /** The user interface controller */
    private UIController uiController;
    
    /**
    * Creates a new comment controller.
    * @param uiController the user interface controller
    */
    public SearchWorkbookController(UIController uiController){
        this.uiController = uiController;
    }
    
    
}
